--- a/documents/Topología_I/main.tex
+++ b/documents/Topología_I/main.tex
@@ -22,6 +22,8 @@
     \input{Tema_1.tex}
     \newpage
     \input{Tema_2.tex}
+    \newpage
+    \input{Tema_3.tex}
     % \chapter{Relaciones de Problemas}
     % \input{Relación 1.tex}
 \end{document}
