--- a/documents/Topología_I/Tema_2.tex
+++ b/documents/Topología_I/Tema_2.tex
@@ -216,7 +216,9 @@
     \end{enumerate}
     \begin{proof}\
         \begin{itemize}
-            \item[(i)$\Rightarrow$(ii)] $\overline{A}\in \cc{C}_{\cc{T}} \overset{(i)}{\Rightarrow} f(\overline{A}\in \cc{C}_{\cc{T}})$ y como  $\overline{f(A)} \subset f(\overline{A})$ lo tenemos.
+            \item[(i)$\Rightarrow$(ii)] $\overline{A}\in \cc{C}_{\cc{T}} \Rightarrow f(A)\subset f(\overline{A}) \Rightarrow \overline{f(A)}\subset \overline{f(\overline{A})}$ y como $f$ es cerrada, tenemos que $\overline{f(\overline{A})} = f(\overline{A})$ y por tanto $\overline{f(A)}\subset f(\overline{A})$.
+            
+
             \item[(ii)$\Rightarrow$(i)] $\overline{C}=C\in \cc{C}_{\cc{T}}$, por (ii) tenemos que $\overline{f(C)}\subset f(\overline{C})= f(C) \in \cc{C}_{\cc{T}'}$. 
         \end{itemize}
     \end{proof}
